project('miniproj3', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++17', 'optimization=3']
)

executable('admit_t1_forever_spin',
           'admit_t1_forever_spin.cpp',
           link_args: ['-static-libstdc++'])

executable('preclude_t1_forever_spin',
           'preclude_t1_forever_spin.cpp',
           link_args: ['-static-libstdc++'])

executable('test_forever_spin',
           'test_forever_spin.cpp',
           link_args: ['-static-libstdc++'])