project('miniproj3', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++17', 'optimization=3']
)

executable('test_admit_forever_spin',
           'test_admit_forever_spin.cpp',
           link_args: ['-static-libstdc++'])

executable('test_preclude_forever_spin',
           'test_preclude_forever_spin.cpp',
           link_args: ['-static-libstdc++'])